--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,8 @@
-SET( AEON_INC ../AEON/inc )
-SET( AEON_SRC ../AEON/src )
+cmake_minimum_required(VERSION 3.0.0)
+set( CMAKE_CXX_STANDARD 20 )
 
-set( AEON_BASE ${AEON_SRC}/Base )
-
-set( TEST_FILES test_Base.cpp )
-
-add_executable( test ${TEST_FILES} )
-target_include_directories( test PRIVATE ${AEON_INC} ${AEON_SRC} )
+if(BUILD_TESTING)
+    add_executable( test_base test_Base.cpp )
+    add_test( NAME aeon-base COMMAND test_base )
+    target_link_libraries( test_base PUBLIC aeon-base )
+endif()
