reinstated public header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(                aeon-base STATIC        Base.cpp )
-set_target_properties(      aeon-base PROPERTIES    POSITION_INDEPENDENT_CODE   TRUE )
+set_target_properties(      aeon-base PROPERTIES    PUBLIC_HEADER               "Base.h"
+                                                    POSITION_INDEPENDENT_CODE   TRUE )
 target_include_directories( aeon-base PUBLIC        ${AEON_DIR} )
 target_precompile_headers(  aeon-base PUBLIC        ${AEON_PRECOMP}     )
 
