--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,16 @@
-add_library(                aeon-base STATIC        Base.cpp )
-set_target_properties(      aeon-base PROPERTIES    PUBLIC_HEADER               "Base.h"
-                                                    POSITION_INDEPENDENT_CODE   TRUE )
-target_include_directories( aeon-base PUBLIC        ${AEON_DIR} )
-target_precompile_headers(  aeon-base PUBLIC        ${AEON_PRECOMP}     )
+project( aeon_base )
 
-install( TARGETS aeon-base )
+add_library( aeon_base 
+    STATIC
+    Base.cpp
+)
+set_target_properties( aeon_base
+    PROPERTIES
+    LINKER_LANGUAGE             CXX
+    PUBLIC_HEADER               "Base.h"
+    POSITION_INDEPENDENT_CODE   TRUE
+)
+target_include_directories( aeon_base PUBLIC        ${CMAKE_CURRENT_SOURCE_DIR} )
+target_precompile_headers(  aeon_base PUBLIC        ${AEON_PRECOMP}     )
+
+install( TARGETS aeon_base )
