--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,13 @@ set( CMAKE_CXX_EXTENSIONS        OFF )
 # AEON::Core ------------------------------------------------------------------------------------------
 set( INPUT_LIB ${CMAKE_CURRENT_SOURCE_DIR}/lib )
 set( INPUT_INC ${CMAKE_CURRENT_SOURCE_DIR}/inc )
-set( INPUT_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src )
+set( INPUT_SRC ${INPUT_INC}/Input )
 
 add_library( aeon-input INTERFACE
-    ${INPUT_INC}/KeyCodes.h
-    ${INPUT_INC}/MouseCodes.h
+    ${INPUT_SRC}/KeyCodes.h
+    ${INPUT_SRC}/MouseCodes.h
+    ${INPUT_INC}/Events/KeyEvents.h
+    ${INPUT_INC}/Events/MouseEvents.h
 )
 
 add_dependencies( aeon-input
@@ -20,7 +22,4 @@ add_dependencies( aeon-input
 
 target_include_directories( aeon-input INTERFACE ${INPUT_INC} )
 
-target_link_libraries( aeon-input
-    PRIVATE
-        aeon-base
-)
+target_link_libraries( aeon-input INTERFACE aeon-base )
