update build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,21 +5,21 @@ set( CMAKE_CXX_STANDARD          20  )
 set( CMAKE_CXX_STANDARD_REQUIRED ON  )
 set( CMAKE_CXX_EXTENSIONS        OFF )
 # AEON::Core ------------------------------------------------------------------------------------------
-set( INPUT_LIB ${CMAKE_CURRENT_SOURCE_DIR}/lib )
-set( INPUT_INC ${CMAKE_CURRENT_SOURCE_DIR}/inc )
-set( INPUT_SRC ${INPUT_INC}/Input )
+set( INPUT_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib )
+set( INPUT_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/inc )
+set( INPUT_SRC_DIR ${INPUT_INC_DIR}/Input )
 
-add_library( aeon-input INTERFACE
-    ${INPUT_SRC}/KeyCodes.h
-    ${INPUT_SRC}/MouseCodes.h
-    ${INPUT_INC}/Events/KeyEvents.h
-    ${INPUT_INC}/Events/MouseEvents.h
+add_library( input INTERFACE
+    ${INPUT_SRC_DIR}/KeyCodes.h
+    ${INPUT_SRC_DIR}/MouseCodes.h
+    ${INPUT_INC_DIR}/Events/KeyEvents.h
+    ${INPUT_INC_DIR}/Events/MouseEvents.h
 )
-
-add_dependencies( aeon-input
-    aeon-base
+target_include_directories( input
+    INTERFACE
+        $<BUILD_INTERFACE:${INPUT_INC_DIR}>
+        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
+target_link_libraries( input INTERFACE base )
 
-target_include_directories( aeon-input INTERFACE ${INPUT_INC} )
-
-target_link_libraries( aeon-input INTERFACE aeon-base )
+add_library( aer::input ALIAS input )
